<resources>
    <string name="app_name">WowGuauV2</string>
    <string name="title_activity_mapa_seleccion">Mapa Seleccion</string>
    <string-array name="Tipo">
        <item>Cliente</item>
        <item>Paseador</item>

    </string-array>

    <string name="disponible">Disponible</string>
    <string name="lista_solicitudes">Lista de Solicitudes</string>
    <string name="menulogout">Cerrar Sesión</string>
    <string name="menu_paseador">Menú Principal</string>
    <string name="estado">Tu Estado</string>
    <string name="seleccione">Seleccione el cliente</string>
    <string name="peticion_estado">Para ver las solicitudes active su estado</string>
    <string name="detalles">Detalles</string>
    <string name="cliente">Cliente</string>
    <string name="mascotas">Mascotas</string>
    <string name="title_activity_lista_paseador_ubicacion">Map</string>
    <string name="title_activity_paseo_en_curso">Map</string>


    <string-array name="razas">
        <item>Raza...</item>
        <item>Labrador</item>
        <item>Pastor Alemán</item>
        <item>Beagle</item>
        <item>Yorkshire Terrier</item>
        <item>Bóxer</item>
        <item>Poodle</item>
        <item>Husky Siberiano</item>
        <item>Golden Retriver</item>
        <item>Rottweiler</item>
        <item>Samoyedo</item>
        <item>Pitbull</item>
        <item>Chow Chow</item>
        <item>Dálmata</item>
        <item>Collie</item>
        <item>Pug</item>
        <item>BullDog Francés</item>
        <item>Schnauzer</item>
        <item>Cocker</item>
        <item>Corgi</item>
        <item>Criollo</item>
        <item>Otro</item>
    </string-array>

    <string-array name="tamañps">
        <item>Tamaño...</item>
        <item>Extra Pequeño</item>
        <item>Pequeño</item>
        <item>Mediano</item>
        <item>Grande</item>
        <item>Extra Grande</item>
    </string-array>
    <string-array name="horasPaseos">
        <item>6:00</item>
        <item>6:30</item>
        <item>7:00</item>
        <item>7:30</item>
        <item>8:00</item>
        <item>8:30</item>
        <item>9:00</item>
        <item>9:30</item>
        <item>10:00</item>
        <item>10:30</item>
        <item>11:00</item>
        <item>11:30</item>
        <item>12:00</item>
        <item>12:30</item>
        <item>13:00</item>
        <item>13:30</item>
        <item>14:00</item>
        <item>14:30</item>
        <item>15:00</item>
        <item>15:30</item>
        <item>16:00</item>
        <item>16:30</item>
        <item>17:00</item>
        <item>17:30</item>
        <item>18:00</item>
        <item>18:30</item>
        <item>19:00</item>
        <item>19:30</item>
        <item>20:00</item>
        <item>20:30</item>
        <item>21:00</item>
        <item>21:30</item>
    </string-array>
    <string name="title_activity_ver_mapa_en_curso">Map</string>
    <string name="title_activity_ver_mapa_paseo_en_curso">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
